# aerial_robotics

./: README.md
robowork_minihawk_autonomy/: CMakeLists.txt  package.xml
robowork_minihawk_autonomy/launch/: auto_arm.launch  sim_auto.launch
robowork_minihawk_autonomy/scripts/: auto_arm_node.py  sitl_wrapper.py
